# stanforteedge

./: .env  .gitignore  .pdm.toml  Procfile  README.md  env.example  main.py  pyproject.toml  requirements.txt  server.py  steve.js  steve2.js
stanforteedge/: main.py  server.py
stanforteedge/core/: middleware.py  settings.py  shortcut.py
stanforteedge/db/: config.py
stanforteedge/src/app/: index.py
stanforteedge/src/app/admin/routes/: index.py
stanforteedge/src/app/admin/routes/auth/: form.py  view.py
stanforteedge/src/app/auth/: models.py
stanforteedge/src/app/base/: base_model.py  base_router.py
stanforteedge/src/app/contact/: form.py  view.py
stanforteedge/src/app/gallery/: models.py  view.py
stanforteedge/src/app/projects/: models.py  view.py
stanforteedge/src/app/team/: models.py  view.py
stanforteedge/src/frontend/: package-lock.json  package.json  tailwind.config.js
stanforteedge/src/frontend/static/img/project/: Insert Headers and Footers ‹ Hephaestusgold.Com — WordPress.html
stanforteedge/src/frontend/static/img/project/Insert Headers and Footers ‹ Hephaestusgold.Com — WordPress_files/: admin(1).css  admin.css  admin.js  backend(1).css  load-scripts(1).php  load-scripts.php  load-styles.php
stanforteedge/src/frontend/static/js/: main.js
stanforteedge/src/frontend/static/style/: input.css  output.css
stanforteedge/src/frontend/templates/: base.html
stanforteedge/src/frontend/templates/admin/: base.html
stanforteedge/src/frontend/templates/admin/layouts/: footer.html  menu-list.html  navbar.html  sidebar.html
stanforteedge/src/frontend/templates/admin/pages/: index.html
stanforteedge/src/frontend/templates/admin/pages/auth/: forgotpassword.html  login.html  register.html  resetpassword.html
stanforteedge/src/frontend/templates/layouts/: footer.html  headers.html  navbar.html  navmenu.html  sidebar.html
stanforteedge/src/frontend/templates/pages/: contact.html  gallery.html  index-save.html  index.html
stanforteedge/src/frontend/templates/pages/about/: board_or_director.html  corporation_profile.html  management_team.html
stanforteedge/src/frontend/templates/pages/projects/: access360.html  check_naija.html  educard.html  follow_dis_act.html  index.html  lafiami.html  project_enable.html  student_pad.html
stanforteedge/src/frontend/templates/snippet/: alert.html
stanforteedge/src/templates/: index.html
stanforteedge/utils/: base.py  flash_message.py
tests/: test_stanforteedge.py
