[tool.poetry]
name = "stanforteedge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "mit"

[tool.poetry.scripts]
server = "stanforteedge.server:run_app"


[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.20.0"
uvicorn = "^0.17.6"
tortoise-orm = {extras = ["aiosqlite"], version = "^0.19.1"}
Jinja2 = "^3.1.2"
install = "^1.3.5"
Starlette-WTF = "^0.4.3"
aiosqlite = "^0.17.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0"}


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest<6.0,>=5.2",
    "black<23.0.0,>=22.3.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [
    {name = "Your Name", email = "you@example.com"},
]
license = {text = "mit"}
requires-python = ">=3.9,<4.0"
dependencies = [
    "starlette<1.0.0,>=0.20.0",
    "uvicorn<1.0.0,>=0.17.6",
    "Jinja2<4.0.0,>=3.1.2",
    "install<2.0.0,>=1.3.5",
    "Starlette-WTF<1.0.0,>=0.4.3",
    "aiosqlite<1.0.0,>=0.17.0",
]
name = "stanforteedge"
version = "0.1.0"
description = ""

[project.urls]

[project.scripts]
server = "stanforteedge.server:run_app"
