[tool.poetry]
name = "stanforteedge"
version = "0.1.0"
description = ""
authors = ["kokoserver <kokoserver20@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.26.1"
uvicorn = "^0.21.1"
yagmail = "^0.15.293"
starlette-wtf = "^0.4.3"
email-validator = "^2.0.0.post2"
tortoise-orm = "^0.19.3"

[tool.poetry.scripts]
server = "server:run_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
